RESOLVED FIXED74012
[Qt] Fix the memory leak of AC layer update message contents on the UI process.
https://bugs.webkit.org/show_bug.cgi?id=74012
Summary [Qt] Fix the memory leak of AC layer update message contents on the UI process.
Jocelyn Turcotte
Reported 2011-12-07 11:11:43 PST
[Qt] Fix the memory leak of AC layer update message contents on the UI process.
Attachments
Patch (1.52 KB, patch)
2011-12-07 11:15 PST, Jocelyn Turcotte
noam: review+
Jocelyn Turcotte
Comment 1 2011-12-07 11:15:28 PST
Jocelyn Turcotte
Comment 2 2011-12-08 07:30:06 PST
Simon Hausmann
Comment 3 2011-12-08 07:30:51 PST
*** Bug 74082 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.