[Qt] Fix the memory leak of AC layer update message contents on the UI process. https://bugs.webkit.org/show_bug.cgi?id=74012

Reviewed by Noam Rosenthal.

Since the messages didn't have a virtual destructor, the destructor
of child class members wouldn't be called and would cause the all tile
update buffers, contained in a QImage, to be leaked as well.

* UIProcess/qt/LayerTreeHostProxyQt.cpp:
(WebKit::LayerTreeMessageToRenderer::~LayerTreeMessageToRenderer):

Canonical link: https://commits.webkit.org/90751@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102336 268f45cc-cd09-0410-ab3c-d52691b4dbfc